tests/paczka1/small_fuzzy/59210815.err
Error in line 2: VZo A74 20,8
Error in line 10: nbO A713 79,5
